avoid overflow on border-radius

--- a/static/scss/tree.scss
+++ b/static/scss/tree.scss
@@ -47,6 +47,7 @@
 .node__body {
 	background: $color-bg;
 	break-inside: avoid;
+	overflow: hidden;  // border-radius
 }
 
 .node__header {
